feat: 테스트 기능 추가